--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "4.6.0",
     "firebase": "8.2.4",
     "react": "17.0.1",
+    "react-bootstrap": "1.4.3",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0"
   },
